--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,22 @@
     <version>1.2</version>
   </parent>
 
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <scm>
+    <connection>scm:git:https://github.com/avaje-common/avaje-website-generator.git</connection>
+    <developerConnection>scm:git:https://github.com/avaje-common/avaje-website-generator.git</developerConnection>
+    <url>https://github.com/avaje-common/avaje-website-generator.git</url>
+  </scm>
+
+
   <dependencies>
 
     <dependency>
