--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,13 @@
     <dependency>
       <groupId>org.python</groupId>
       <artifactId>jython-standalone</artifactId>
-      <version>2.5.3</version>
+      <version>2.7.1b3</version>
     </dependency>
 
     <dependency>
       <groupId>org.pygments</groupId>
       <artifactId>pygments</artifactId>
-      <version>1.5</version>
+      <version>2.1.1</version>
     </dependency>
 
     <dependency>
