--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.avaje</groupId>
   <artifactId>avaje-website-generator</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <parent>
@@ -32,7 +32,7 @@
     <dependency>
       <groupId>org.avaje</groupId>
       <artifactId>avaje-freemarker</artifactId>
-      <version>2.1.1-SNAPSHOT</version>
+      <version>2.1.2</version>
     </dependency>
 
     <dependency>
@@ -89,8 +89,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
 <!-- 
