--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <parent>
     <groupId>org.avaje</groupId>
-    <artifactId>avaje-javaparent</artifactId>
+    <artifactId>java8-parent</artifactId>
     <version>1.3</version>
   </parent>
 
