--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.avaje</groupId>
   <artifactId>avaje-website-generator</artifactId>
-  <version>2.1.3-SNAPSHOT</version>
+  <version>2.2.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <parent>
     <groupId>org.avaje</groupId>
-    <artifactId>java8-parent</artifactId>
-    <version>1.3</version>
+    <artifactId>java8-oss</artifactId>
+    <version>2.1</version>
   </parent>
 
   <licenses>
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.avaje</groupId>
       <artifactId>avaje-freemarker</artifactId>
-      <version>2.1.2</version>
+      <version>2.2.1</version>
     </dependency>
 
     <dependency>
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>org.pygments</groupId>
       <artifactId>pygments</artifactId>
-      <version>2.2.0</version>
+      <version>2.4.2</version>
     </dependency>
 
     <dependency>
