--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.avaje</groupId>
   <artifactId>avaje-website-generator</artifactId>
-  <version>2.2.1-SNAPSHOT</version>
+  <version>2.2.1</version>
   <packaging>jar</packaging>
 
   <parent>
@@ -22,7 +22,7 @@
   <scm>
     <developerConnection>scm:git:git@github.com:avaje-common/avaje-website-generator.git</developerConnection>
     <url>https://github.com/avaje-common/avaje-website-generator.git</url>
-    <tag>avaje-website-generator-2.1.1</tag>
+    <tag>avaje-website-generator-2.2.1</tag>
   </scm>
 
 
